--- a/package.json
+++ b/package.json
@@ -1,15 +1,32 @@
 {
-  "name": "charron.dev",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "next": "9.5.3",
-    "react": "16.13.1",
-    "react-dom": "16.13.1"
-  }
+    "name": "charron.dev",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start"
+    },
+    "dependencies": {
+        "@mapbox/rehype-prism": "^0.5.0",
+        "classnames": "^2.2.6",
+        "next": "^9.5.3",
+        "next-mdx-remote": "^1.0.0",
+        "react": "^16.13.1",
+        "react-dom": "^16.13.1"
+    },
+    "devDependencies": {
+        "@mdx-js/loader": "^1.6.18",
+        "@next/mdx": "^9.5.3",
+        "@prefresh/next": "^1.2.4",
+        "@svgr/webpack": "^5.4.0",
+        "@types/classnames": "^2.2.10",
+        "@types/node": "^14.11.2",
+        "@types/react": "^16.9.50",
+        "@types/webpack": "^4.41.22",
+        "gray-matter": "^4.0.2",
+        "prettier": "^2.1.2",
+        "sass": "^1.26.11",
+        "typescript": "^4.0.3"
+    }
 }
