--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "next": "^9.5.3",
         "next-mdx-remote": "^1.0.0",
         "react": "^16.13.1",
-        "react-dom": "^16.13.1"
+        "react-dom": "^16.13.1",
+        "sitemap": "^6.3.2"
     },
     "devDependencies": {
         "@mdx-js/loader": "^1.6.18",
