--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dependencies": {
         "@mapbox/rehype-prism": "^0.5.0",
         "classnames": "^2.2.6",
+        "html2plaintext": "^2.1.2",
         "next": "^9.5.3",
         "next-mdx-remote": "^1.0.0",
         "react": "^16.13.1",
