--- a/package.json
+++ b/package.json
@@ -13,20 +13,23 @@
         "html2plaintext": "^2.1.2",
         "next": "^9.5.3",
         "next-mdx-remote": "^1.0.0",
-        "react": "^16.13.1",
-        "react-dom": "^16.13.1",
+        "next-plugin-preact": "^3.0.1",
+        "preact": "10.5.2",
+        "preact-render-to-string": "^5.1.10",
+        "react": "npm:@preact/compat",
+        "react-dom": "npm:@preact/compat",
         "sitemap": "^6.3.2"
     },
     "devDependencies": {
         "@mdx-js/loader": "^1.6.18",
         "@next/mdx": "^9.5.3",
-        "@prefresh/next": "^1.2.4",
         "@svgr/webpack": "^5.4.0",
         "@types/classnames": "^2.2.10",
         "@types/node": "^14.11.2",
         "@types/react": "^16.9.50",
         "@types/webpack": "^4.41.22",
         "gray-matter": "^4.0.2",
+        "preact-ssr-prepass": "^1.1.1",
         "prettier": "^2.1.2",
         "sass": "^1.26.11",
         "typescript": "^4.0.3"
