--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
         "@types/classnames": "^2.2.10",
         "@types/node": "^14.14.6",
         "@types/react": "^16.9.55",
+        "@types/rss": "^0.0.28",
         "@types/webpack": "^4.41.24",
         "gray-matter": "^4.0.2",
         "preact-ssr-prepass": "^1.1.2",
         "prettier": "^2.1.2",
+        "rss": "^1.2.2",
         "sass": "^1.28.0",
         "typescript": "^4.0.5"
     }
