--- a/package.json
+++ b/package.json
@@ -8,31 +8,33 @@
         "start": "next start"
     },
     "dependencies": {
-        "@mapbox/rehype-prism": "^0.5.0",
+        "@mapbox/rehype-prism": "^0.8.0",
         "classnames": "^2.2.6",
         "html2plaintext": "^2.1.2",
-        "next": "^10.0.0",
-        "next-mdx-remote": "^1.0.0",
-        "next-plugin-preact": "^3.0.3",
-        "preact": "10.5.5",
-        "preact-render-to-string": "^5.1.11",
+        "next": "^12.3.1",
+        "next-plugin-preact": "^3.0.7",
+        "preact": "^10.11.0",
+        "preact-render-to-string": "^5.2.4",
+        "preact-ssr-prepass": "^1.2.0",
         "react": "npm:@preact/compat",
         "react-dom": "npm:@preact/compat",
-        "sitemap": "^6.3.3"
+        "react-ssr-prepass": "npm:preact-ssr-prepass",
+        "rehype-format": "^4.0.1",
+        "rehype-stringify": "^9.0.3",
+        "remark-parse": "^10.0.1",
+        "remark-rehype": "^10.1.0",
+        "rss": "^1.2.2",
+        "sitemap": "^7.1.1",
+        "unified": "^10.1.2"
     },
     "devDependencies": {
-        "@mdx-js/loader": "^1.6.19",
-        "@next/mdx": "^10.0.0",
-        "@svgr/webpack": "^5.4.0",
-        "@types/classnames": "^2.2.10",
-        "@types/node": "^14.14.6",
-        "@types/react": "^16.9.55",
-        "@types/rss": "^0.0.28",
-        "@types/webpack": "^4.41.24",
+        "@svgr/webpack": "^6.3.1",
+        "@types/node": "^18.7.20",
+        "@types/react": "^18.0.21",
+        "@types/rss": "^0.0.29",
+        "@types/webpack": "^5.28.0",
         "gray-matter": "^4.0.2",
-        "preact-ssr-prepass": "^1.1.2",
-        "prettier": "^2.1.2",
-        "rss": "^1.2.2",
+        "prettier": "2.2",
         "sass": "^1.28.0",
         "typescript": "^4.0.5"
     }
