--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     },
     "dependencies": {
         "@mapbox/rehype-prism": "^0.8.0",
+        "@preact/compat": "^17.1.1",
         "classnames": "^2.2.6",
         "html2plaintext": "^2.1.2",
         "next": "^12.3.1",
@@ -16,9 +17,9 @@
         "preact": "^10.11.0",
         "preact-render-to-string": "^5.2.4",
         "preact-ssr-prepass": "^1.2.0",
-        "react": "npm:@preact/compat",
-        "react-dom": "npm:@preact/compat",
-        "react-ssr-prepass": "npm:preact-ssr-prepass",
+        "react": "npm:@preact/compat@*",
+        "react-dom": "npm:@preact/compat@*",
+        "react-ssr-prepass": "npm:preact-ssr-prepass@*",
         "rehype-format": "^4.0.1",
         "rehype-stringify": "^9.0.3",
         "remark-parse": "^10.0.1",
@@ -28,6 +29,7 @@
         "unified": "^10.1.2"
     },
     "devDependencies": {
+        "@prefresh/babel-plugin": "^0.4.3",
         "@svgr/webpack": "^6.3.1",
         "@types/node": "^18.7.20",
         "@types/react": "^18.0.21",
@@ -36,6 +38,8 @@
         "gray-matter": "^4.0.2",
         "prettier": "2.2",
         "sass": "^1.28.0",
-        "typescript": "^4.0.5"
-    }
+        "typescript": "^4.0.5",
+        "webpack": "^5.74.0"
+    },
+    "packageManager": "yarn@3.2.3"
 }
