--- a/package.json
+++ b/package.json
@@ -8,18 +8,15 @@
         "start": "next start"
     },
     "dependencies": {
-        "@mapbox/rehype-prism": "^0.8.0",
+        "@mapbox/rehype-prism": "^0.7.0",
         "@preact/compat": "^17.1.2",
         "classnames": "^2.3.2",
         "html2plaintext": "^2.1.4",
         "next": "^13.4.4",
-        "next-plugin-preact": "^3.0.7",
         "preact": "^10.15.1",
         "preact-render-to-string": "^6.0.3",
-        "preact-ssr-prepass": "^1.2.0",
-        "react": "npm:@preact/compat@*",
-        "react-dom": "npm:@preact/compat@*",
-        "react-ssr-prepass": "npm:preact-ssr-prepass@*",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "rehype-format": "^4.0.1",
         "rehype-stringify": "^9.0.3",
         "remark-parse": "^10.0.2",
@@ -29,17 +26,15 @@
         "unified": "^10.1.2"
     },
     "devDependencies": {
-        "@prefresh/babel-plugin": "^0.5.0",
         "@svgr/webpack": "^8.0.1",
         "@types/node": "^20.2.5",
         "@types/react": "^18.2.8",
         "@types/rss": "^0.0.30",
         "@types/webpack": "^5.28.1",
         "gray-matter": "^4.0.3",
-        "prettier": "2.8.8",
+        "prettier": "^2.8.8",
         "sass": "^1.62.1",
         "typescript": "^5.1.3",
         "webpack": "^5.85.0"
-    },
-    "packageManager": "yarn@3.2.3"
+    }
 }
