--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     },
     "dependencies": {
         "@mapbox/rehype-prism": "^0.7.0",
+        "@mdx-js/loader": "^2.3.0",
+        "@mdx-js/react": "^2.3.0",
+        "@next/mdx": "^13.4.4",
         "@preact/compat": "^17.1.2",
         "classnames": "^2.3.2",
+        "feed": "^4.2.2",
         "html2plaintext": "^2.1.4",
         "next": "^13.4.4",
         "preact": "^10.15.1",
@@ -21,8 +25,6 @@
         "rehype-stringify": "^9.0.3",
         "remark-parse": "^10.0.2",
         "remark-rehype": "^10.1.0",
-        "rss": "^1.2.2",
-        "sitemap": "^7.1.1",
         "unified": "^10.1.2"
     },
     "devDependencies": {
