--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,15 @@
         "**/bower_components": true,
         "**/*.code-search": true,
         ".next": true
+    },
+    "files.exclude": {
+        "**/.git": true,
+        "**/.svn": true,
+        "**/.hg": true,
+        "**/CVS": true,
+        "**/.DS_Store": true,
+        "**/Thumbs.db": true,
+        ".next": true,
+        ".vercel": true
     }
 }
