--- a/package.json
+++ b/package.json
@@ -5,61 +5,61 @@
     "scripts": {
         "dev": "next dev",
         "build": "next build",
-        "start": "next start"
+        "start": "next start",
+        "watch-types": "tsc --noEmit --incremental --watch"
     },
     "dependencies": {
-        "@dnd-kit/sortable": "^7.0.2",
-        "@mantine/hooks": "^6.0.13",
-        "@mapbox/rehype-prism": "^0.7.0",
-        "@preact/compat": "^17.1.2",
-        "@radix-ui/colors": "^0.1.8",
-        "@radix-ui/react-checkbox": "^1.0.4",
-        "@radix-ui/react-dialog": "^1.0.4",
-        "@radix-ui/react-dropdown-menu": "^2.0.5",
-        "@radix-ui/react-icons": "^1.3.0",
-        "@radix-ui/react-progress": "^1.0.3",
-        "@radix-ui/react-select": "^1.2.2",
-        "@radix-ui/react-toggle": "^1.0.3",
-        "@radix-ui/react-toggle-group": "^1.0.4",
-        "@radix-ui/react-toolbar": "^1.0.4",
-        "@radix-ui/react-tooltip": "^1.0.6",
-        "axios": "^1.4.0",
+        "@dnd-kit/sortable": "^10.0.0",
+        "@mantine/hooks": "^7.16.2",
+        "@mapbox/rehype-prism": "^0.9.0",
+        "@radix-ui/colors": "^3.0.0",
+        "@radix-ui/react-checkbox": "^1.1.3",
+        "@radix-ui/react-dialog": "^1.1.5",
+        "@radix-ui/react-dropdown-menu": "^2.1.5",
+        "@radix-ui/react-icons": "^1.3.2",
+        "@radix-ui/react-progress": "^1.1.1",
+        "@radix-ui/react-select": "^2.1.5",
+        "@radix-ui/react-toggle": "^1.1.1",
+        "@radix-ui/react-toggle-group": "^1.1.1",
+        "@radix-ui/react-toolbar": "^1.1.1",
+        "@radix-ui/react-tooltip": "^1.1.7",
+        "axios": "^1.7.9",
         "blurhash": "^2.0.5",
-        "classnames": "^2.3.2",
-        "critters": "^0.0.19",
+        "classnames": "^2.5.1",
+        "critters": "^0.0.23",
         "exifr": "^7.1.3",
-        "extract-colors": "^3.0.0",
-        "fast-blurhash": "^1.1.2",
+        "extract-colors": "^4.1.1",
+        "fast-blurhash": "^1.1.4",
         "feed": "^4.2.2",
-        "framer-motion": "^10.12.16",
+        "framer-motion": "^12.0.6",
         "html2plaintext": "^2.1.4",
         "install": "^0.13.0",
-        "next": "^13.4.4",
-        "preact": "^10.15.1",
-        "preact-render-to-string": "^6.0.3",
+        "next": "15.1.6",
         "proper-lockfile": "^4.1.2",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "rehype-format": "^4.0.1",
-        "rehype-stringify": "^9.0.3",
-        "remark-parse": "^10.0.2",
-        "remark-rehype": "^10.1.0",
-        "unified": "^10.1.2",
-        "use-local-storage-state": "^18.3.3"
+        "react": "19.0.0",
+        "react-dom": "19.0.0",
+        "rehype-format": "^5.0.1",
+        "rehype-stringify": "^10.0.1",
+        "remark-parse": "^11.0.0",
+        "remark-rehype": "^11.1.1",
+        "unified": "^11.0.5",
+        "use-local-storage-state": "^19.5.0"
     },
     "devDependencies": {
-        "@cloudflare/next-on-pages": "^1.0.1",
-        "@svgr/webpack": "^8.0.1",
-        "@types/node": "^20.2.5",
-        "@types/proper-lockfile": "^4.1.2",
-        "@types/react": "^18.2.8",
-        "@types/rss": "^0.0.30",
-        "@types/webpack": "^5.28.1",
+        "@cloudflare/next-on-pages": "^1.13.7",
+        "@svgr/webpack": "^8.1.0",
+        "@types/node": "^22.13.0",
+        "@types/proper-lockfile": "^4.1.4",
+        "@types/react": "19.0.8",
+        "@types/rss": "^0.0.32",
+        "@types/webpack": "^5.28.5",
         "gray-matter": "^4.0.3",
-        "next-export-optimize-images": "^2.1.0",
-        "prettier": "^2.8.8",
-        "sass": "^1.62.1",
-        "typescript": "^5.1.3",
-        "webpack": "^5.85.0"
+        "prettier": "^3.4.2",
+        "sass": "^1.83.4",
+        "typescript": "^5.7.3",
+        "webpack": "^5.97.1"
+    },
+    "overrides": {
+        "@types/react": "19.0.8"
     }
 }
