--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@dnd-kit/sortable": "^10.0.0",
         "@mantine/hooks": "^7.16.2",
         "@mapbox/rehype-prism": "^0.9.0",
+        "@preact/compat": "^18.3.1",
         "@radix-ui/colors": "^3.0.0",
         "@radix-ui/react-checkbox": "^1.1.3",
         "@radix-ui/react-dialog": "^1.1.5",
@@ -35,6 +36,8 @@
         "html2plaintext": "^2.1.4",
         "install": "^0.13.0",
         "next": "15.1.6",
+        "preact": "^10.25.4",
+        "preact-render-to-string": "^6.5.13",
         "proper-lockfile": "^4.1.2",
         "react": "19.0.0",
         "react-dom": "19.0.0",
@@ -47,7 +50,6 @@
     },
     "devDependencies": {
         "@cloudflare/next-on-pages": "^1.13.7",
-        "@opennextjs/cloudflare": "^0.4.3",
         "@svgr/webpack": "^8.1.0",
         "@types/node": "^22.13.0",
         "@types/proper-lockfile": "^4.1.4",
