Add opengraph images

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@radix-ui/react-toolbar": "^1.1.1",
         "@radix-ui/react-tooltip": "^1.1.7",
         "@vercel/analytics": "^1.4.1",
+        "@vercel/og": "^0.6.5",
         "@vercel/speed-insights": "^1.1.0",
         "axios": "^1.7.9",
         "blurhash": "^2.0.5",
