--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
         "framer-motion": "^12.0.6",
         "html2plaintext": "^2.1.4",
         "install": "^0.13.0",
-        "next": "15.1.6",
+        "next": "^15.5.2",
         "proper-lockfile": "^4.1.2",
         "react": "19.0.0",
         "react-dom": "19.0.0",
@@ -49,7 +49,6 @@
         "use-local-storage-state": "^19.5.0"
     },
     "devDependencies": {
-        "@cloudflare/next-on-pages": "^1.13.7",
         "@svgr/webpack": "^8.1.0",
         "@types/node": "^22.13.0",
         "@types/proper-lockfile": "^4.1.4",
