--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "react-dom": "19.0.0",
         "rehype-format": "^5.0.1",
         "rehype-stringify": "^10.0.1",
+        "remark-gfm": "^4.0.1",
         "remark-parse": "^11.0.0",
         "remark-rehype": "^11.1.1",
         "unified": "^11.0.5",
